[tool.poetry]
name = "starship-defender"
version = "0.1.0"
description = ""
authors = ["Iaroslav <GunGalla@gmail.com>"]
readme = "README.md"
packages = [{include = "starship_defender"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.scripts]
starship-def = "starship_defender.starship_def:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
